--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
